conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: value update is not a member of Boolean
if (estFaceMur()=True)
    ^Conditions:1: error: not found: value True
if (estFaceMur()=True)
                 ^